fix(schedule): Move z-indexes to prevent dropdown layering issue

--- a/internal_packages/composer-scheduler/stylesheets/scheduler.less
+++ b/internal_packages/composer-scheduler/stylesheets/scheduler.less
@@ -61,12 +61,15 @@
       }
     }
     .row.time {
-      z-index: 10; // So the time pickers show over
       .time-picker {
         text-align: center;
       }
       .time-picker-wrap {
         margin-right: 5px;
+
+        .time-options {
+          z-index: 10; // So the time pickers show over
+        }
       }
     }
     .datetime-input-container {
